--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,3 +15,5 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.0"
 dotenvy = "0.15"
+actix-web-httpauth = "0.8"
+jsonwebtoken = "9.0"
